--- a/src/views/create-account.ejs
+++ b/src/views/create-account.ejs
@@ -53,7 +53,7 @@
                                                     name="email"
                                                     class="form-control"
                                                     id="email"
-                                                    placeholder="bros@gmail.com"
+                                                    placeholder="ezfashion@gmail.com"
                                                 />
                                             </div>
                                             <div class="form-group">
@@ -65,7 +65,7 @@
                                                     name="username"
                                                     class="form-control"
                                                     id="username"
-                                                    placeholder="Nhập username"
+                                                    placeholder="Nhập tên đăng nhập"
                                                 />
                                             </div>
                                             <div class="form-group">
@@ -97,7 +97,7 @@
                                                 <div class="col-auto">
                                                     <div class="form-group">
                                                         <button
-                                                            class="btn btn-border"
+                                                            class="btn"
                                                             type="submit"
                                                         >
                                                             Đăng ký
@@ -112,8 +112,9 @@
                                                             class="additional-links"
                                                         >
                                                             <li>
-                                                                or
-                                                                <a href="/"
+                                                                <a
+                                                                    href="/"
+                                                                    class="btn-link"
                                                                     >Quay về cửa
                                                                     hàng</a
                                                                 >
