--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -66,15 +66,15 @@
                       <div class="row">
                         <div class="col-auto">
                           <div class="form-group">
-                            <button class="btn btn-border" type="submit">
-                              XÁC NHẬN
+                            <button class="btn" type="submit">
+                              Xác nhận
                             </button>
                           </div>
                         </div>
                         <div class="col-auto align-self-center">
                           <div class="form-group">
                             <ul class="additional-links">
-                              <li>or <a href="/">Quay về cửa hàng</a></li>
+                              <li><a href="/" class="btn-link">Quay về cửa hàng</a></li>
                             </ul>
                           </div>
                         </div>
